--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "gh-pages": "^0.12.0",
     "react-scripts": "0.9.0"
   },
-  "homepage": "http://chakrihacker.github.io/react-weather",
+  "homepage": "https://chakrihacker.github.io/react-weather",
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
